--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "chance": "^1.0.13",
     "express": "^4.16.3",
     "express-generator": "^4.16.0",
