--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chance": "^1.0.13",
     "express": "^4.16.3",
     "express-generator": "^4.16.0",
+    "jest": "^22.4.3",
     "mysql2": "^1.5.3",
     "sequelize": "^4.37.6",
     "sequelize-cli": "^4.0.0"
