--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "chance": "^1.0.13",
+    "datatables": "^1.10.13",
     "express": "^4.16.3",
     "express-generator": "^4.16.0",
     "jest": "^22.4.3",
