integrating with heroku

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "migrate": "node_modules/.bin/sequelize db:migrate",
     "stop": "node_modules/.bin/sequelize db:migrate:undo",
     "seedstart": "node_modules/.bin/sequelize db:seed:all",
-    "seedstop": "node_modules/.bin/sequelize db:seed:undo:all"
+    "seedstop": "node_modules/.bin/sequelize db:seed:undo:all",
+      "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
