--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "stop": "node_modules/.bin/sequelize db:migrate:undo",
     "seedstart": "node_modules/.bin/sequelize db:seed:all",
     "seedstop": "node_modules/.bin/sequelize db:seed:undo:all",
-      "start": "node server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "http": "0.0.0",
     "jest": "^22.4.3",
     "mysql2": "^1.5.3",
+    "nodemailer": "^4.6.4",
     "paginationjs": "^2.1.2",
     "sequelize": "^4.37.6",
     "sequelize-cli": "^4.0.0"
