--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.2",
     "chance": "^1.0.13",
     "datatables": "^1.10.13",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-generator": "^4.16.0",
     "http": "0.0.0",
