adding minor changes

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 DB_HOST=localhost
-DB_DATABASE=OLStore
+DB_DATABASE=OStore_Prototype
 DB_USER=root
 DB_PASS=root
-M_AUTH=U0ItTWlkLXNlcnZlci1yZUI1WVJVRlVpWGgyc2VHM1J1RXpTTEo6
-MT_USER=10d26a1130a324
-MT_PASS=53804ef841ea69
-MT_MAIL=0fda59b80b-06b3bf@inbox.mailtrap.io
+M_AUTH=U0ItTWlkLXNlcnZlsi26ZUI1WVJVRlV1WGgyc2VHM1J1RXpTTEo6
+MT_USER=10p26a1130c324
+MT_PASS=53804pf841hc69
+MT_MAIL=0fmk59d80m-06f3mf@inbox.mailtrap.io
