--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mysql2": "^1.5.3",
     "nodemailer": "^4.6.4",
     "paginationjs": "^2.1.2",
+    "pg": "^7.4.3",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.37.6",
     "sequelize-cli": "^4.0.0"
   },
